@startuml models_diagram_platform
' Diagrama de Modelos - Padrão Plataforma
' skinparam linetype ortho

' Tabela de Domínio Generalizada
entity "geral_classificadores" as clf {
  * clf_id : int (PK)
  --
  clf_tipo : varchar(50) ' Ex: 'STATUS_JOB', 'TIPO_PARCEIRO'
  clf_codigo : varchar(50) ' Ex: 'CONCLUIDO', 'CLIENTE'
  clf_descricao : varchar(255)
  --
  UNIQUE(clf_tipo, clf_codigo)
}

' Tabelas de Cadastro / Mestre
entity "cadastro_empresas" as emp {
  * emp_id : int (PK)
  --
  emp_nome : varchar(255)
  emp_cnpj : varchar(18) {unique}
  .. Auditoria ..
  emp_dt_criacao : timestamptz
  emp_dt_alteracao : timestamptz
  emp_usr_criacao : int
  emp_usr_alteracao : int
  emp_dt_exclusao : timestamptz
}

entity "cadastro_parceiros" as pcr {
  * pcr_id : int (PK)
  --
  # clf_id_tipo : int (FK) -> aponta para clf(TIPO_PARCEIRO)
  pcr_nome : varchar(255)
  pcr_cnpj : varchar(18) {unique}
  .. Auditoria ..
  pcr_dt_criacao : timestamptz
  pcr_dt_alteracao : timestamptz
  pcr_usr_criacao : int
  pcr_usr_alteracao : int
  pcr_dt_exclusao : timestamptz
}

' Tabelas de Movimento / Transacionais
entity "movimento_jobs_processamento" as jbp {
  * jbp_id : int (PK)
  --
  # emp_id : int (FK)
  # clf_id_status : int (FK) -> aponta para clf(STATUS_JOB)
  jbp_arquivo_original : varchar(255)
  jbp_mensagem_erro : text
  .. Auditoria ..
  jbp_dt_criacao : timestamptz
  jbp_dt_alteracao : timestamptz
  jbp_usr_criacao : int
  jbp_usr_alteracao : int
}

entity "movimento_notas_fiscais" as ntf {
  * ntf_id : int (PK)
  --
  # jbp_id : int (FK)
  # pcr_id : int (FK)
  ntf_numero : varchar(100)
  ntf_data_emissao : date
  ntf_valor_total : numeric(12,2) ' Soma dos itens
  .. Auditoria ..
  ntf_dt_criacao : timestamptz
  ntf_dt_alteracao : timestamptz
  ntf_usr_criacao : int
  ntf_usr_alteracao : int
}

entity "movimento_nota_fiscal_itens" as nfi {
  * nfi_id : int (PK)
  --
  # ntf_id : int (FK)
  nfi_descricao : varchar(255)
  nfi_quantidade : numeric(10,3)
  nfi_valor_unitario : numeric(10,2)
  nfi_valor_total : numeric(12,2)
}

entity "movimento_lancamentos_financeiros" as lcf {
  * lcf_id : int (PK)
  --
  # ntf_id : int (FK)
  # clf_id_tipo : int (FK) -> aponta para clf(TIPO_LANCAMENTO)
  # clf_id_status : int (FK) -> aponta para clf(STATUS_LANCAMENTO)
  lcf_descricao : varchar(255)
  lcf_valor : numeric(10,2)
  lcf_data_vencimento : date
  lcf_data_pagamento : date
  .. Auditoria ..
  lcf_dt_criacao : timestamptz
  lcf_dt_alteracao : timestamptz
  lcf_usr_criacao : int
  lcf_usr_alteracao : int
}

' Relacionamentos
emp ||--|{ jbp
pcr ||--o{ ntf

clf <- pcr::clf_id_tipo
clf <- jbp::clf_id_status
clf <- lcf::clf_id_tipo
clf <- lcf::clf_id_status


jbp ||--|{ ntf
ntf ||--|{ nfi
ntf ||--o{ lcf

@enduml